<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_item_name" />

                <EditText
                    android:id="@+id/itemName_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/ellipses"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_description_for_your_item" />

                <EditText
                    android:id="@+id/itemDescription_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ellipses"
                    android:inputType="textLongMessage"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="When did you acquire this item? (Optional)" />

                <EditText
                    android:id="@+id/itemDate_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ellipses"
                    android:inputType="date"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_item_picture" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <Button
                    android:id="@+id/takeItemImgButton"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="14dp"
                    android:text="@string/take_picture_prompt" />

                <ImageView
                    android:id="@+id/itemImgView"
                    android:layout_width="182dp"
                    android:layout_height="147dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <Button
                    android:id="@+id/addItemButton"
                    android:layout_width="138dp"
                    android:layout_height="69dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="14dp"
                    android:text="@string/add_item_prompt" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>